#5773 Fixed display of edit feature, added wrapping for lower resolutions

--- a/front/src/app/dialogs/edit-feature/edit-feature.component.scss
+++ b/front/src/app/dialogs/edit-feature/edit-feature.component.scss
@@ -188,6 +188,7 @@ a {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
+  flex-wrap: wrap;
   @include for-tablet-portrait-up {
     flex-direction: row;
     align-items: center;
